--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                 <a href="#"><img src="top.jpg" class="topp" alt=""></a>
             </div>
         </div>
-       
+         <br><br>
+        <footer>
+                <ul class="lists">
+                    <li class="socials"><a href="https://www.github.com/Nengha-John/"><i class="fab fa-github"></i></a></li>
+                    <li class="socials"><a href="https://www.instagram.com/nengha.jm/"><i class="fab fa-instagram"></i></a></li>
+                    <li class="socials"><a href="https://www.linkedin.com/in/nengha-john-393a72210/"><i class="fab fa-linkedin"></i></a></li> <br>
+                    &copy;Copyright
+                </ul> 
+        </footer>
     </body>
 </html>
