--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
                     &copy;Copyright
                 </ul> 
         </footer>
+        <script src="https://kit.fontawesome.com/277531a6df.js" crossorigin="anonymous"></script>
     </body>
 </html>
