--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <li class="socials"><a href="https://www.github.com/Nengha-John/"><i class="fab fa-github"></i></a></li>
                     <li class="socials"><a href="https://www.instagram.com/nengha.jm/"><i class="fab fa-instagram"></i></a></li>
                     <li class="socials"><a href="https://www.linkedin.com/in/nengha-john-393a72210/"><i class="fab fa-linkedin"></i></a></li> <br>
-                    &copy;Copyright
+                    &nbsp;  &nbsp;  &nbsp;&copy;Copyright
                 </ul> 
         </footer>
         <script src="https://kit.fontawesome.com/277531a6df.js" crossorigin="anonymous"></script>
